sf-demo/live-model/force-app/main/default/objects/Service_Request__c/Service_Request__c.object-meta.xml
<CustomObject>
    <description>A service request related to an Account or a Lead. Sample-data scratch org only.</description>
    <label>Service Request</label>
    <nameField>
        <displayFormat>SR-{0000}</displayFormat>
        <label>Service Request Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Service Requests</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>