sf-demo/live-model/force-app/main/default/objects/Service_Request__c/fields/Summary__c.field-meta.xml
<CustomField>
    <fullName>Summary__c</fullName>
    <description>What the service request is about. Sample rows end this text with (Sample).</description>
    <label>Summary</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>