sf-demo/live-model/force-app/main/default/objects/Service_Request__c/validationRules/Account_or_Lead_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Account_or_Lead_Required</fullName>
    <active>true</active>
    <description>A service request must be related to an Account or a Lead (or both).</description>
    <errorConditionFormula>AND(ISBLANK(Account__c), ISBLANK(Lead__c))</errorConditionFormula>
    <errorMessage>Relate this Service Request to an Account or a Lead.</errorMessage>
</ValidationRule>